attempting to fix bg issue on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,15 +10,21 @@
   --color-shadow-light: rgba(57, 57, 57, 0.3);
   --main-font: 'Georgia', serif;
   --secondary-font: 'Open-sans', sans-serif;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+html,
+body {
+  background: var(--color-bg);
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
 * {
   margin: 0;
 }
 
-html{
-  background: var(--color-bg);
-}
+
 h1{
   font-family: var(--main-font);
   font-size: 4rem;
